--- a/.config/tmux/gitmux.yml
+++ b/.config/tmux/gitmux.yml
@@ -18,14 +18,15 @@ tmux:
     hashprefix: ":"
     staged: " "
     conflict: "󰕚 "
-    untracked: "󱀶 "
-    modified: " "
+    untracked: "?"
+    modified: "•"
     stashed: " "
-    insertions: " "
-    deletions: " "
+    insertions: "+"
+    deletions: "-"
   styles:
     state: "#[fg=red,nobold]"
     branch: "#[fg=white,italics]"
+    remote: "#[fg=white,italics]"
     staged: "#[fg=green,nobold]"
     conflict: "#[fg=red,nobold]"
     modified: "#[fg=yellow,nobold]"
@@ -33,7 +34,8 @@ tmux:
     stashed: "#[fg=gray,nobold]"
     clean: "#[fg=green,nobold]"
     divergence: "#[fg=cyan,nobold]"
-  layout: [branch, divergence, flags, stats]
+  layout: [ remote-branch, "..", branch, divergence, flags, stats ]
   options:
+    show_name: true
     branch_max_len: 0
-    hide_clean: false
+    hide_clean: true
